# raydium-contract-instructions

./: .gitignore  Anchor.toml  Cargo.toml  README.md  amm_instruction.rs  amm_stats.rs
amm-anchor/: Cargo.toml  README.md
amm-anchor/src/: accounts.rs  instructions.rs  lib.rs
client/: Cargo.toml
client/src/: main.rs
example/: .gitignore  Anchor.toml  README.md  package.json
example/programs/amm-proxy/: Cargo.toml
example/programs/amm-proxy/src/: lib.rs
example/programs/amm-proxy/src/instructions/: deposit.rs  initialize.rs  swap_base_in.rs  swap_base_out.rs  withdraw.rs
example/tests/: amm-proxy.ts  util.ts
farm-anchor/: Cargo.toml
farm-anchor/src/: accounts.rs  instructions.rs  lib.rs
lib/: Cargo.toml
lib/src/: amm_instruction.rs  amm_stats.rs  farm_instruction.rs  farm_stats.rs  lib.rs  route_error.rs  route_instruction.rs  route_states.rs  stable_instruction.rs  stable_stats.rs  staking_instruction.rs  staking_stats.rs
local_validator/: start-test-validator.sh
local_validator/test-validator/accounts/: 3XMrhbv989VxAMi3DErLV9eJht1pHppW5LbKxe9fkEFR.json  8QN9yfKqWDoKjvZmqFsgCzAqwZBQuzVVnC388dN5RCPo.json
src/: amm_instruction.rs  amm_log.rs  amm_stats.rs  error.rs  lib.rs  routes.rs  rpc.rs  state.rs  tests.rs
stable-amm-anchor/: Cargo.toml
stable-amm-anchor/src/: accounts.rs  instructions.rs  lib.rs
staking-anchor/: Cargo.toml
staking-anchor/src/: accounts.rs  instructions.rs  lib.rs
tests/amm-proxy/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
tests/amm-proxy/programs/amm-proxy/: Cargo.toml
tests/amm-proxy/programs/amm-proxy/src/: lib.rs
tests/amm-proxy/programs/amm-proxy/src/instructions/: deposit.rs  initialize.rs  mod.rs  pre_initialize.rs  swap_base_in.rs  swap_base_out.rs  withdraw.rs
tests/amm-proxy/tests/: amm-proxy.ts  util.ts
