[package]
name = "amm-anchor"
version = "0.2.0"
description = "Anchor bindings for the AMM native instruction."
homepage = "https://raydium.io/"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
edition = "2021"
keywords = ["solana", "raydium", "amm", "anchor"]

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.17.14"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
raydium-contract-instructions = { path = "../lib"}
