[package]
name = "amm-anchor"
version = "0.1.0"
description = "Anchor bindings for the AMM native instruction."
homepage = "https://raydium.io/"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
edition = "2021"
keywords = ["solana", "raydium", "amm", "anchor"]


[features]
devnet = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0" }
raydium-contract-instructions = { path = "../lib" }
