[package]
edition = "2021"
name = "amm_client"
version = "0.3.0"

[[bin]]
name = "amm_client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
raydium-contract-instructions = {path = "../lib"}
solana-client = "1.14.12"
solana-sdk = "1.14.12"
spl-associated-token-account = "1.0.3"
spl-token = {version = "3.2.0", features = ["no-entrypoint"], default-features = false}
