[package]
name = "amm_client"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "amm_client"
path = "src/main.rs"

[dependencies]
raydium-contract-instructions = { path = "../lib"}
spl-token = { version = "4.0.0", features = ["no-entrypoint"], default-features = false }
spl-associated-token-account = "2.3.0"
solana-client = "1.9.5"
solana-sdk = "1.9.5"
anyhow = "1.0.53"

