[package]
description = "Anchor bindings for the farm native instruction."
edition = "2021"
homepage = "https://raydium.io/"
keywords = ["solana", "raydium", "farm", "anchor"]
name = "farm-anchor"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm_anchor"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = "0.26"
raydium-contract-instructions = {path = "../lib"}
solana-program = "1.14.12"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
