[package]
name = "farm-anchor"
version = "0.1.0"
description = "Anchor bindings for the farm native instruction."
homepage = "https://raydium.io/"
repository = "https://github.com/raydium-io/raydium-contract-instructions"
edition = "2021"
keywords = ["solana", "raydium", "farm", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "farm_anchor"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0" }
raydium-contract-instructions = { path = "../lib" }
