[package]
name = "amm-proxy"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
amm-anchor = {path = "../../../../amm-anchor"}
